--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -19,7 +19,7 @@ copyright = ["2024 Romain Guimbal"]
 
 # platforms = ["any", "windows-x64"]
 wheels = [
-  "./wheels/six-1.16.0-py3-none-any.whl",
+  "./wheels/six-1.16.0-py2.py3-none-any.whl",
   # "./wheels/OCC-7.7.2-cp311-cp311-win_amd64.whl",
 ]
 
