--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -17,10 +17,13 @@ license = ["SPDX:LGPL-2.0-or-later"]
 
 copyright = ["2024 Romain Guimbal"]
 
-# platforms = ["any", "windows-x64"]
+# platforms = ["windows-x64", "macos-x64", ]
 wheels = [
   "./wheels/six-1.16.0-py2.py3-none-any.whl",
   "./wheels/cadquery_ocp-7.7.2-cp311-cp311-win_amd64.whl",
+  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-manylinux_2_35_x86_64.whl",
+  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl",
+  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-macosx_10_9_x86_64.whl"
 ]
 
 [permissions]
