--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -3,7 +3,7 @@ schema_version = "1.0.0"
 id = "surfacepsycho"
 version = "0.7.0"
 name = "Surface Psycho"
-tagline = "Surface Design in Blender"
+tagline = "Precision Surface Design"
 maintainer = "Romain Guimbal"
 type = "add-on"
 
