--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,7 +1,7 @@
 schema_version = "1.0.0"
 
 id = "surfacepsycho"
-version = "0.7.0"
+version = "0.8.0"
 name = "Surface Psycho"
 tagline = "Precision Surface Design"
 maintainer = "Romain Guimbal"
@@ -20,7 +20,7 @@ copyright = ["2024 Romain Guimbal"]
 # platforms = ["windows-x64", "macos-x64", ]
 wheels = [
   "./wheels/six-1.16.0-py2.py3-none-any.whl",
-  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-win_amd64.whl",
+  "./wheels/cadquery_ocp_novtk-7.8.1.0-cp311-cp311-win_amd64.whl",
   "./wheels/cadquery_ocp-7.7.2-cp311-cp311-manylinux_2_35_x86_64.whl",
   "./wheels/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl",
   "./wheels/cadquery_ocp-7.7.2-cp311-cp311-macosx_10_9_x86_64.whl"
