--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cmake.sourceDirectory": "D:/Projets/SurfacePsycho/.github/workflows"
+    "cmake.sourceDirectory": "D:/Projets/SurfacePsycho/.github/workflows",
+
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportInvalidTypeForm": "none"
+    }
 }
