--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,7 +1,7 @@
 schema_version = "1.0.0"
 
 id = "surfacepsycho"
-version = "0.8.0"
+version = "0.8.1"
 name = "Surface Psycho"
 tagline = "Precision Surface Design"
 maintainer = "Romain Guimbal"
@@ -13,17 +13,17 @@ tags = ["Modeling", "Import-Export", "Geometry Nodes"]
 
 blender_version_min = "4.3.0"
 
-license = ["SPDX:LGPL-2.0-or-later"]
+license = ["SPDX:GPL-3.0-or-later"]
 
 copyright = ["2024 Romain Guimbal"]
 
-# platforms = ["windows-x64", "macos-x64", ]
+platforms = ["windows-x64", "macos-x64", "macos-arm64", "linux-x64"]
 wheels = [
   "./wheels/six-1.16.0-py2.py3-none-any.whl",
-  "./wheels/cadquery_ocp_novtk-7.8.1.0-cp311-cp311-win_amd64.whl",
-  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-manylinux_2_35_x86_64.whl",
-  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl",
-  "./wheels/cadquery_ocp-7.7.2-cp311-cp311-macosx_10_9_x86_64.whl"
+  "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-win_amd64.whl",
+  "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-macosx_11_0_x86_64.whl",
+  "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-macosx_11_0_arm64.whl",
+  "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-manylinux_2_31_x86_64.whl"
 ]
 
 [permissions]
@@ -37,7 +37,7 @@ paths_exclude_pattern = [
   "/.vscode/",
   "/.github/",
   "/*.zip",
-  "/*.blend1",
+  "*.blend1",
   ".gitignore",
   ".gitattributes",
   "README.md",
