--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -23,7 +23,8 @@ wheels = [
   "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-win_amd64.whl",
   "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-macosx_11_0_x86_64.whl",
   "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-macosx_11_0_arm64.whl",
-  "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-manylinux_2_31_x86_64.whl"
+  "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-manylinux_2_31_x86_64.whl",
+  "./wheels/line_profiler-5.0.0-cp311-cp311-win_amd64.whl",
 ]
 
 [permissions]
