--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -11,11 +11,11 @@ website = "https://github.com/RomainGuimbal/SurfacePsycho/wiki"
 
 tags = ["Modeling", "Import-Export", "Geometry Nodes", "Add Curve"]
 
-blender_version_min = "4.5.0"
+blender_version_min = "5.0.0"
 
 license = ["SPDX:GPL-3.0-or-later"]
 
-copyright = ["2024 Romain Guimbal"]
+copyright = ["2025 Romain Guimbal"]
 
 platforms = ["windows-x64", "macos-x64", "macos-arm64", "linux-x64"]
 wheels = [
@@ -24,7 +24,7 @@ wheels = [
   "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-macosx_11_0_x86_64.whl",
   "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-macosx_11_0_arm64.whl",
   "./wheels/cadquery_ocp_novtk-7.8.1.1.post1-cp311-cp311-manylinux_2_31_x86_64.whl",
-  "./wheels/line_profiler-5.0.0-cp311-cp311-win_amd64.whl",
+  # "./wheels/line_profiler-5.0.0-cp311-cp311-win_amd64.whl",
 ]
 
 [permissions]
