add warning with instance negative scale

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -49,15 +49,23 @@
             ],
             "problemMatcher": []
         },
-        // {
-        //     "label": "BUILD",
-        //     "type": "shell",
-        //     "command": "powershell",
-        //     "args": [
-        //         "$blenderPath = Get-ChildItem 'C:\\Program Files\\Blender Foundation' -Directory -ErrorAction SilentlyContinue | Sort-Object Name -Descending | Select-Object -First 1 -ExpandProperty FullName; if ($blenderPath) { $blenderExe = Join-Path $blenderPath 'blender.exe'; Write-Host \"Using Blender at: $blenderExe\"; & $blenderExe --command extension build --source-dir ${workspaceFolder} --output-dir ${workspaceFolder}/.. --split-platforms --verbose } else { Write-Error 'Blender_not_found'}"
-        //         ],
-        //     "problemMatcher": []
-        // },
+        {
+            "label": "Build",
+            "type": "shell",
+            "command": "blender",
+            "args": [
+                "--command",
+                "extension",
+                "build",
+                "--source-dir",
+                "${workspaceFolder}",
+                "--output-dir",
+                "${workspaceFolder}/..",
+                "--split-platforms",
+                "--verbose",
+            ],
+            "problemMatcher": []
+        },
         {
             "label": "Print assets",
             "type": "shell",
